--- a/single-repo.html
+++ b/single-repo.html
@@ -2,29 +2,34 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>Git it Done</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Git it Done</title>
 </head>
 
 <body class="flex-column min-100-vh">
-  <header class="hero">
-    <h1 class="app-title">Showing Issues for: <span id="repo-name"></span></h1>
-    
-    <div>
-      <a href="./index.html" class="btn-back">
+    <header class="hero">
+        <h1 class="app-title">Showing Issues for: <span id="repo-name"></span></h1>
+
+        <div>
+            <a href="./index.html" class="btn-back">
         Go Back
       </a>
-    </div>
-    
-  </header>
-  
-  <main>
-  
-  </main>
+        </div>
 
+    </header>
+
+    <main>
+        <div class="list-group" id="issues-container">
+
+        </div>
+        <div id="limit-warning">
+
+        </div>
+    </main>
+    <script src="assets\js\single.js"></script>
 </body>
 
 </html>
